src/graph/snapshots/hopr_api__graph__function__tests__forward_last_edge_positive_when_intermediate_but_no_capacity.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 2, result_value: cost }"
---
observations:
  immediate: ~
  intermediate:
    balance: ~
    score: 0.95
initial_value: 1
path_index: 2
result_value: 0.5
