src/graph/snapshots/hopr_api__graph__function__tests__forward_last_edge_positive_without_connectivity.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 2, result_value: cost }"
---
observations:
  immediate: ~
  intermediate:
    balance: "1000"
    score: 0.95
initial_value: 1
path_index: 2
result_value: 0.95
