src/graph/snapshots/hopr_api__graph__function__tests__forward_length_two_intermediate_at_index_one-2.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{\n    observations: obs_e, initial_value: 1.0, path_index: 1, result_value:\n    cost_empty\n}"
---
observations:
  immediate: ~
  intermediate: ~
initial_value: 1
path_index: 1
result_value: 0.5
